--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/logo.svg" alt="Spots Logo" class="header logo" />
+        <img src="./images/logo.svg" alt="Spots Logo" class="header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -33,19 +33,23 @@
                 class="profile__icon"
               />Edit Profile
             </button>
-          </div>  
-            <button type="button" class="profile__add-btn">
-              <img
-                src="./images/plus.svg"
-                alt="Add Icon"
-                class="profile__icon"
-              />New Post
-            </button>
+          </div>
+          <button type="button" class="profile__add-btn">
+            <img
+              src="./images/plus.svg"
+              alt="Add Icon"
+              class="profile__icon"
+            />New Post
+          </button>
         </section>
         <section class="cards">
-            <ul class="cards__list">
+          <ul class="cards__list">
             <li class="card">
-              <img src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg" alt="Val Thorens" class="card__image"/>
+              <img
+                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Val Thorens"
+                class="card__image"
+              />
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
                 <button type="button" class="card__like-btn">
@@ -58,7 +62,11 @@
               </div>
             </li>
             <li class="card">
-              <img src="./images/2-photo-by-ceiline-from-pexels.jpg" alt="Restaurant Terrace" class="card__image"/>
+              <img
+                src="./images/2-photo-by-ceiline-from-pexels.jpg"
+                alt="Restaurant Terrace"
+                class="card__image"
+              />
               <div class="card__content">
                 <h2 class="card__title">Restaurant terrace</h2>
                 <button type="button" class="card__like-btn">
@@ -71,7 +79,11 @@
               </div>
             </li>
             <li class="card">
-              <img src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg" alt="Outdoor Cafe" class="card__image"/>
+              <img
+                src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
+                alt="Outdoor Cafe"
+                class="card__image"
+              />
               <div class="card__content">
                 <h2 class="card__title">An outdoor cafe</h2>
                 <button type="button" class="card__like-btn">
@@ -84,9 +96,15 @@
               </div>
             </li>
             <li class="card">
-              <img src="./images/4-photo-by-maurice-laschet-from-pexels.jpg" alt="Bridge" class="card__image"/>
+              <img
+                src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
+                alt="Bridge"
+                class="card__image"
+              />
               <div class="card__content">
-                <h2 class="card__title">A very long bridge, over the forest...</h2>
+                <h2 class="card__title">
+                  A very long bridge, over the forest...
+                </h2>
                 <button type="button" class="card__like-btn">
                   <img
                     src="./images/like-icon-dark.svg"
@@ -97,7 +115,11 @@
               </div>
             </li>
             <li class="card">
-              <img src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg" alt="Tunnel" class="card__image"/>
+              <img
+                src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
+                alt="Tunnel"
+                class="card__image"
+              />
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
                 <button type="button" class="card__like-btn">
@@ -109,8 +131,12 @@
                 </button>
               </div>
             </li>
-             <li class="card">
-              <img src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg" alt="Mountain House" class="card__image"/>
+            <li class="card">
+              <img
+                src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Mountain House"
+                class="card__image"
+              />
               <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
                 <button type="button" class="card__like-btn">
@@ -122,11 +148,10 @@
                 </button>
               </div>
             </li>
-            </ul>
+          </ul>
         </section>
-    </div>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">2025 Spots</footer>
     </div>
   </body>
 </html>
