--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           </ul>
         </section>
       </main>
-      <footer class="footer">2025 Spots</footer>
+      <footer class="footer">2023 © Spots</footer>
     </div>
   </body>
 </html>
