--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             />New Post
           </button>
         </section>
-        <section class="cards">
+        <section class="cards page__section">
           <ul class="cards__list">
             <li class="card">
               <img
@@ -151,7 +151,7 @@
           </ul>
         </section>
       </main>
-      <footer class="footer">2023 © Spots</footer>
+      <footer class="footer__copyright"><p>2023 © Spots</p></footer>
     </div>
   </body>
 </html>
